audiobookshelf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: audiobookshelf
  type: ClusterIP
