audiobookshelf/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - db3000.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /audiobookshelf
      backendRefs:
        - name: audiobookshelf
          port: 80
          kind: Service
